--- a/index.html
+++ b/index.html
@@ -1,105 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover"
-    />
-    <title>8th Wall AR — Chroma-Keyed Video Placement</title>
-    <link rel="stylesheet" href="./styles/style.css" />
-    <script src="https://cdn.8thwall.com/web/aframe/8.7.0/aframe.min.js"></script>
-    <script
-      defer
-      src="https://cdn.8thwall.com/web/xrextras/xrextras.js"
-    ></script>
-    <script
-      defer
-      src="https://apps.8thwall.com/xrweb?appKey=YOUR_APP_KEY"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/examples/js/loaders/PLYLoader.js"></script>
-    <script defer src="./components/chroma-key-shader.js"></script>
-    <script defer src="./components/gesture-controls.js"></script>
-    <script defer src="./components/ply-entity.js"></script>
-    <script defer src="./scripts/video-sync.js"></script>
-    <script type="module" src="./scripts/app.js"></script>
-  </head>
-  <body>
-    <div id="ui">
-      <div id="instructions" class="panel">
-        Move your phone to scan a <b>horizontal surface</b>. Tap to place the
-        video.
-      </div>
-      <div id="topbar">
-        <button id="resetBtn" class="ghost">Reset Placement</button>
-      </div>
-      <button id="playBtn" class="pill" disabled>▶︎ Play Video</button>
-    </div>
-
-    <a-scene
-      xrweb="allowedDevices: any"
-      xrextras-almost-there
-      xrextras-loading
-      renderer="colorManagement: true; physicallyCorrectLights: true; antialias: true; alpha: true"
-      webxr="requiredFeatures: hit-test; optionalFeatures: dom-overlay; overlayElement: #ui"
-    >
-      <a-entity id="camera" camera position="0 1.6 0" look-controls></a-entity>
-
-      <a-entity
-        light="type: hemisphere; intensity: 1.0; groundColor: #666"
-        position="0 2 0"
-      ></a-entity>
-      <a-entity
-        light="type: directional; intensity: 0.7"
-        position="1 3 2"
-      ></a-entity>
-
-      <a-entity
-        id="reticle"
-        geometry="primitive: ring; radiusInner: 0.045; radiusOuter: 0.06"
-        material="color: #00e676; shader: flat; opacity: 0.9"
-        xrextras-hittest
-        visible="false"
-      >
-      </a-entity>
-
-      <a-entity id="placedRoot" visible="false" gesture-controls>
-        <a-entity
-          id="shadow"
-          geometry="primitive: plane; width: 0.9; height: 0.5"
-          rotation="-90 0 0"
-          position="0 0.001 0"
-          material="shader: oval-shadow; opacity: 0.85"
-        >
-        </a-entity>
-
-        <a-entity
-          id="videoPlane"
-          geometry="primitive: plane; width: 0.8; height: 0.45"
-          rotation="0 0 0"
-          chroma-key-material="src: #greenscreen; keyColor: 0.13333334 0.72941178 0.18039216; similarity: 0.23; smoothness: 0.07; spill: 0.10"
-        >
-        </a-entity>
-
-        <a-entity
-          id="plyEntity"
-          ply-entity="src: ./assets/splat.ply; scale: 0.5 0.5 0.5"
-          position="0 0 -0.2"
-        >
-        </a-entity>
-      </a-entity>
-
-      <a-assets timeout="15000">
-        <video
-          id="greenscreen"
-          src="./assets/greenscreen.mp4"
-          crossorigin="anonymous"
-          preload="metadata"
-          playsinline
-          webkit-playsinline
-          loop
-        ></video>
-      </a-assets>
-    </a-scene>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
+  <title>WebXR AR — Chroma-Keyed Video (Self-Hosted)</title>
+  <link rel="stylesheet" href="./styles/style.css" />
+  <style>#enterAR{position:fixed;left:50%;top:50%;transform:translate(-50%,-50%);background:#fff;border:none;border-radius:999px;padding:12px 16px;font-weight:700;box-shadow:0 10px 30px rgba(0,0,0,.25)}</style>
+  <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
+  <script src="https://unpkg.com/three@0.160.0/examples/jsm/webxr/ARButton.js"></script>
+  <script src="https://unpkg.com/three@0.160.0/examples/js/loaders/PLYLoader.js"></script>
+  <script defer src="./scripts/ovalShadowShader.js"></script>
+  <script defer src="./scripts/gestureControls.js"></script>
+  <script defer src="./scripts/app.js"></script>
+</head>
+<body>
+  <div id="ui">
+    <div id="placeHint" class="panel">Move your phone to scan a <b>horizontal surface</b>. Tap to place the video.</div>
+    <div id="instructions" class="panel">Point at a horizontal surface and move slowly until a target appears. Then tap to place.</div>
+    <div id="topbar"><button id="resetBtn" class="ghost">Reset Placement</button></div>
+    <button id="playBtn" class="pill" disabled>▶︎ Play Video</button>
+    <button id="enterAR">Enter AR</button>
+    <div id="reticle"><svg viewBox="0 0 100 100"><circle cx="50" cy="50" r="22" stroke="white" stroke-width="3" fill="none"/><circle cx="50" cy="50" r="2" fill="white"/></svg></div>
+  </div>
+</body>
 </html>
